applications/terra-v0demo-production/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrafusion-app-service
  namespace: terrafusion-pro
spec:
  selector:
    app: terrafusion-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
